packages/errors/test/__snapshots__/CLOUD_API_RESPONSE_FAILED_RETRYING.ansi
[31mWe encountered an unexpected error communicating with our servers.[39m
[31m[39m
[31m[95mStatusCodeError: 500 - "Internal Server Error"[39m[31m[39m
[31m[39m
[31mWe will retry 3 more times in 5 seconds...[39m
[31m[39m